Align icon of the WMF correctly with text

--- a/wiki_contribution/static/css/base.css
+++ b/wiki_contribution/static/css/base.css
@@ -80,6 +80,10 @@ label {
     display: inline-block;
 }
 
+.navbar-brand {
+    vertical-align: middle;
+}
+
 .fa-fw {
     margin-left: -10px;
 }
